# advent-of-code

./: README.md
2019/day01/: Cargo.toml
2019/day01/src/: main.rs
2019/day03/: Cargo.toml
2019/day03/src/: main.rs
2019/day04/src/: main.rs
2019/day05/: Cargo.toml  README.md
2019/day05/src/: main.rs
2019/day06/: Cargo.toml
2019/day07/: README.md
2019/day07/src/: lib.rs  main.rs
2019/day08/: README.md
2019/day08/src/: main.rs
2019/day09/src/: lib.rs
2019/day1/: .gitignore
2019/day10/: Cargo.toml  README.md
2019/day10/src/: main.rs
2019/day2/: Cargo.toml
2019/day2/src/: main.rs
2019/day3/src/: main.rs
2019/day4/: Cargo.toml
2019/day5/src/: main.rs
2019/day6/: README.md
2019/day6/src/: main.rs
2019/day7/: Cargo.toml  README.md
2019/day7/src/: lib.rs  main.rs
2019/day8/: Cargo.toml  README.md
2019/day8/src/: main.rs
2019/day9/: Cargo.toml  README.md
2019/day9/src/: main.rs
2022/aoclib/src/: lib.rs
2022/day1/: README.md
2022/day1/day1/: Cargo.toml
2022/day2/: README.md
2022/day2/day2/: Cargo.toml
2022/day3/: README.md
2022/day3/day3p1/: Cargo.toml
2022/day3/day3p2/: Cargo.toml
2022/day4/: README.md
2022/day4/day4p2/: Cargo.toml
2022/day5/: README.md
2022/day5/day5p1/: Cargo.toml
2022/day5/day5p2/: Cargo.toml
2022/day6/: README.md
2022/day7/: README.md  puzz_short.txt
2022/day7/day7p1/: Cargo.toml
2022/day7/day7p1/src/: main.rs
2022/day7/day7p2/: Cargo.toml
2022/day8/: README.md  puzzle.csv
2022/day8/day8p1/: Cargo.toml  Makefile
2022/day8/day8p1/src/: main.rs
2022/day9/: README.md
(+14 files in other folders)
