[package]
name = "day7p1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoclib = {path = "../../aoclib",  version="0.1.0"}
log = "0.4.17"
pretty_env_logger = "0.4.0"
thiserror = "1.0.38"
type-cli = "0.0.3"
