[package]
name = "day8p1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoclib = {path = "../../aoclib",  version="0.1.0"}
polars = {version = "0.26.1", features = ["ndarray", "lazy"]}
thiserror = "1.0.38"
type-cli = "0.0.3"

